<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   <ScrollView
       android:id="@+id/scrollView1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true" >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_centerInParent="true"
           android:orientation="vertical" >

           <TextView
               android:id="@+id/textView1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:text="@string/app_name"
               android:textAppearance="?android:attr/textAppearanceLarge" />

           <Button
               android:id="@+id/bluetoothbutton1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:onClick="on"
               android:text="@string/on" />

           <Button
               android:id="@+id/bluetoothbutton2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:onClick="visible"
               android:text="@string/Visible" />

           <Button
               android:id="@+id/bluetoothbutton3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:onClick="list"
               android:text="@string/List" />

           <Button
               android:id="@+id/bluetoothbutton4"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:onClick="off"
               android:text="@string/off" />

           <ListView
               android:id="@+id/listView1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:visibility="visible" >
           </ListView>
       </LinearLayout>
   </ScrollView>

</RelativeLayout>