<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backgroundgradient"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_menu_comment" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/numero"
            android:textColor="@color/bluefonce" />

        <EditText
            android:id="@+id/numerotel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_style" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/messagetexto"
        android:textColor="@color/bluefonce" />

    <EditText
        android:id="@+id/messagetel"
        android:layout_width="fill_parent"
        android:layout_height="200sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_style"
        android:hint="Votre message"
        android:paddingLeft="20dp"
        android:textSize="12sp" />

    <Button
        android:id="@+id/envoyer"
        style="@drawable/border_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bleuhopital4"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/envoyer"
        android:textColorHint="@color/vertjaune2"
        android:textColorLink="@color/vertjaune3"
        
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" />

</LinearLayout>